@@ -1,7 +1,7 @@
 #include <glib.h>
 #include "gda-sql-delimiter.h"
 
-static void test_string (const gchar *str);
+static gboolean test_string (const gchar *str);
 int 
 main (int argc, char **argv) {
 	test_string ("Select field AS \"my field\" , 'sdfjk', func (sdlkfj + slkdjf) - sdlkf");
@@ -11,11 +11,14 @@ main (int argc, char **argv) {
 	test_string ("SELECT kmj, \"sdfjk [:name=\"titi\"]\" sdlkfj slkdjf sdlkf");
 	test_string ("SELECT schema.table.field || ##[:name=\"Postfix\" :type=\"varchar\"]");
 	test_string ("SELECT afield; UPDATE a firld");
+	test_string ("update customers set salesrep.'id'=10");
+	test_string ("abcedf hdqsjh qkjhd qjkhdq ## [:type=\"integer\"]");
+	test_string ("SELECT ## [:type=\"int4\"] i=10");
 	
 	return 0;
 }
 
-static void
+static gboolean
 test_string (const gchar *str)
 {
 	GdaDelimiterStatement *statement, *copy;
@@ -27,12 +30,15 @@ test_string (const gchar *str)
 	statement = gda_delimiter_parse (str);
 	if (statement) {
 		gda_delimiter_display (statement);
-		copy = gda_delimiter_parse_copy_statement (statement);
+		copy = gda_delimiter_parse_copy_statement (statement, NULL);
 		gda_delimiter_destroy (statement);
 		g_print ("#### COPY:\n");
 		gda_delimiter_display (copy);
 		gda_delimiter_destroy (copy);
+		return TRUE;
 	}
-	else
+	else {
 		g_print ("ERROR\n");
+		return FALSE;
+	}
 }
